<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pma.weatherapp.ui.weather_current.WeatherCurrentFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_weather_current" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.pma.weatherapp.ui.weather_daily.WeatherDailyFragment"
        android:label="@string/title_daily"
        tools:layout="@layout/fragment_weather_daily" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.pma.weatherapp.ui.weather_hourly.WeatherHourlyFragment"
        android:label="@string/title_hourly"
        tools:layout="@layout/fragment_weather_hourly" />
</navigation>