<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="135dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/card_daily_background"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/weather_hourly_card_style"
            android:padding="10dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerGuidelineHourly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerGuidelineHourly2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

            <TextView
                android:id="@+id/textHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="23:00" />

            <TextView
                android:id="@+id/textDayHourly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/textDescription"
                app:layout_constraintLeft_toLeftOf="@id/textHour"
                app:layout_constraintTop_toBottomOf="@id/textHour"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Monday" />

            <ImageView
                android:id="@+id/iconHumidity"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:background="@drawable/ic_humidity"
                app:layout_constraintLeft_toRightOf="@id/centerGuidelineHourly"
                app:layout_constraintTop_toTopOf="@id/textHour"
                android:contentDescription="@string/content_description_weather_humidity_icon" />

            <TextView
                android:id="@+id/textHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@id/iconHumidity"
                app:layout_constraintLeft_toRightOf="@id/iconHumidity"
                app:layout_constraintTop_toTopOf="@id/iconHumidity"
                tools:text="92%" />

            <ImageView
                android:id="@+id/iconWind"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_wind"
                app:layout_constraintBottom_toBottomOf="@id/textDayHourly"
                app:layout_constraintLeft_toRightOf="@id/centerGuidelineHourly"
                app:layout_constraintTop_toBottomOf="@id/iconHumidity"
                android:contentDescription="@string/content_description_weather_wind_icon" />

            <TextView
                android:id="@+id/windSpeedTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@id/iconWind"
                app:layout_constraintLeft_toRightOf="@id/iconWind"
                app:layout_constraintTop_toTopOf="@id/iconWind"
                tools:text="2 m/s" />

            <ImageView
                android:id="@+id/weatherImageHourly"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="@id/centerGuidelineHourly2"
                app:layout_constraintLeft_toRightOf="@id/centerGuidelineHourly2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/content_description_weather_icon" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/textTemperature"
                app:layout_constraintTop_toTopOf="@id/textTemperature"
                tools:text="Heavy shower snow" />

            <TextView
                android:id="@+id/textTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintLeft_toRightOf="@id/centerGuidelineHourly2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weatherImageHourly"
                app:layout_constraintVertical_bias="0.0"
                tools:text="18°C" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>